# agent

./: .gitignore  Makefile  README.md  make.bat  pyproject.toml  requirements.txt
agent/: ARCHITECTURE.md  env.example  pyproject.toml  setup.cfg
agent/src/agent/: __init__.py  cli.py  config.py  llm.py  orchestrator.py  reporter.py  utils.py
agent/src/agent/tools/: __init__.py  db.py  packages.py  python_exec.py
src/agent/: cli.py  config.py  llm.py  logger.py  orchestrator.py  reporter.py
src/agent/tools/: base.py  python_exec.py  shell.py  web.py
